--- a/TEST2/TEST2/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/TEST2/TEST2/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,23 +1,77 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2519" systemVersion="12A206j" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1856"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--View Controller-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2SW-ot-cAe">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="216" id="W3H-da-KZX"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="dataSource" destination="2" id="54j-b5-1cT"/>
+                                    <outlet property="delegate" destination="2" id="k0a-JP-EUU"/>
+                                </connections>
+                            </pickerView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kDK-ia-npp">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="43" id="GPb-QQ-wAj"/>
+                                    <constraint firstAttribute="width" constant="185" id="Qu3-eo-FoL"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="走一个" image="sleeping_santaclaus.png">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="spin" destination="2" eventType="touchUpInside" id="Zkg-K1-Qi0"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="kDK-ia-npp" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="56" id="2k2-qH-jEx"/>
+                            <constraint firstItem="2SW-ot-cAe" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="B3R-Gh-o9H"/>
+                            <constraint firstItem="2SW-ot-cAe" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="LTK-b2-zkk"/>
+                            <constraint firstItem="2SW-ot-cAe" firstAttribute="top" secondItem="3" secondAttribute="top" type="default" id="ZvX-jU-fYA"/>
+                            <constraint firstAttribute="bottom" secondItem="kDK-ia-npp" secondAttribute="bottom" constant="75" id="h22-K7-Yds"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="goButoon" destination="kDK-ia-npp" id="o2s-A9-4e2"/>
+                        <outlet property="picker" destination="2SW-ot-cAe" id="Z0U-Hm-Qsb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="sleeping_santaclaus.png" width="48" height="48"/>
+    </resources>
+    <classes>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="ViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="goButoon" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="picker" candidateClass="UIPickerView"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
