--- a/TEST2/TEST2/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/TEST2/TEST2/en.lproj/MainStoryboard_iPhone.storyboard
@@ -14,6 +14,7 @@
                         <subviews>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2SW-ot-cAe">
                                 <constraints>
+                                    <constraint firstAttribute="width" constant="241" id="Qdc-ll-p6E"/>
                                     <constraint firstAttribute="height" constant="216" id="W3H-da-KZX"/>
                                 </constraints>
                                 <connections>
@@ -38,23 +39,56 @@
                                     <action selector="spin" destination="2" eventType="touchUpInside" id="Zkg-K1-Qi0"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SFF-01-jrE">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="停止">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="stop" destination="2" eventType="touchUpInside" id="F8q-7N-Rb5"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IdI-Wi-Ubg">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="255" id="1GM-sd-0ax"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="kDK-ia-npp" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="56" id="2k2-qH-jEx"/>
-                            <constraint firstItem="2SW-ot-cAe" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="B3R-Gh-o9H"/>
+                            <constraint firstItem="IdI-Wi-Ubg" firstAttribute="bottom" secondItem="2SW-ot-cAe" secondAttribute="bottom" type="default" id="6eX-Ng-QOb"/>
+                            <constraint firstItem="2SW-ot-cAe" firstAttribute="trailing" secondItem="kDK-ia-npp" secondAttribute="trailing" type="default" id="Anj-dZ-S0R"/>
+                            <constraint firstItem="IdI-Wi-Ubg" firstAttribute="top" secondItem="3" secondAttribute="top" type="default" id="JTx-UG-ZsT"/>
                             <constraint firstItem="2SW-ot-cAe" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="LTK-b2-zkk"/>
+                            <constraint firstItem="SFF-01-jrE" firstAttribute="leading" secondItem="kDK-ia-npp" secondAttribute="leading" type="default" id="SFw-kR-Jot"/>
+                            <constraint firstAttribute="bottom" secondItem="SFF-01-jrE" secondAttribute="bottom" constant="15" id="XCD-I2-u9s"/>
                             <constraint firstItem="2SW-ot-cAe" firstAttribute="top" secondItem="3" secondAttribute="top" type="default" id="ZvX-jU-fYA"/>
+                            <constraint firstItem="IdI-Wi-Ubg" firstAttribute="trailing" secondItem="2SW-ot-cAe" secondAttribute="trailing" type="default" id="aCm-xL-SGG"/>
+                            <constraint firstItem="SFF-01-jrE" firstAttribute="trailing" secondItem="kDK-ia-npp" secondAttribute="trailing" type="default" id="dUO-HV-FhW"/>
                             <constraint firstAttribute="bottom" secondItem="kDK-ia-npp" secondAttribute="bottom" constant="75" id="h22-K7-Yds"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="goButoon" destination="kDK-ia-npp" id="o2s-A9-4e2"/>
                         <outlet property="picker" destination="2SW-ot-cAe" id="Z0U-Hm-Qsb"/>
+                        <outlet property="stopButton" destination="SFF-01-jrE" id="PBN-4o-TGV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-20" y="44"/>
         </scene>
     </scenes>
     <resources>
@@ -69,6 +103,7 @@
             <relationships>
                 <relationship kind="outlet" name="goButoon" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="picker" candidateClass="UIPickerView"/>
+                <relationship kind="outlet" name="stopButton" candidateClass="UIButton"/>
             </relationships>
         </class>
     </classes>
