--- a/TEST2/TEST2/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/TEST2/TEST2/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12F13" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -14,8 +14,7 @@
                         <subviews>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2SW-ot-cAe">
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="241" id="Qdc-ll-p6E"/>
-                                    <constraint firstAttribute="height" constant="216" id="W3H-da-KZX"/>
+                                    <constraint firstAttribute="width" constant="241" id="csA-u7-pvI"/>
                                 </constraints>
                                 <connections>
                                     <outlet property="dataSource" destination="2" id="54j-b5-1cT"/>
@@ -24,8 +23,8 @@
                             </pickerView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kDK-ia-npp">
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="43" id="GPb-QQ-wAj"/>
-                                    <constraint firstAttribute="width" constant="185" id="Qu3-eo-FoL"/>
+                                    <constraint firstAttribute="height" constant="43" id="6cA-Ya-YYp"/>
+                                    <constraint firstAttribute="width" constant="185" id="SqV-AG-ZoV"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="走一个" image="sleeping_santaclaus.png">
@@ -54,7 +53,8 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IdI-Wi-Ubg">
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="255" id="1GM-sd-0ax"/>
+                                    <constraint firstAttribute="width" constant="255" id="EvV-1N-fzh"/>
+                                    <constraint firstAttribute="height" constant="216" id="sjf-FY-J6s"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal">
@@ -68,16 +68,16 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="IdI-Wi-Ubg" firstAttribute="bottom" secondItem="2SW-ot-cAe" secondAttribute="bottom" type="default" id="6eX-Ng-QOb"/>
-                            <constraint firstItem="2SW-ot-cAe" firstAttribute="trailing" secondItem="kDK-ia-npp" secondAttribute="trailing" type="default" id="Anj-dZ-S0R"/>
-                            <constraint firstItem="IdI-Wi-Ubg" firstAttribute="top" secondItem="3" secondAttribute="top" type="default" id="JTx-UG-ZsT"/>
-                            <constraint firstItem="2SW-ot-cAe" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="LTK-b2-zkk"/>
-                            <constraint firstItem="SFF-01-jrE" firstAttribute="leading" secondItem="kDK-ia-npp" secondAttribute="leading" type="default" id="SFw-kR-Jot"/>
-                            <constraint firstAttribute="bottom" secondItem="SFF-01-jrE" secondAttribute="bottom" constant="15" id="XCD-I2-u9s"/>
-                            <constraint firstItem="2SW-ot-cAe" firstAttribute="top" secondItem="3" secondAttribute="top" type="default" id="ZvX-jU-fYA"/>
-                            <constraint firstItem="IdI-Wi-Ubg" firstAttribute="trailing" secondItem="2SW-ot-cAe" secondAttribute="trailing" type="default" id="aCm-xL-SGG"/>
-                            <constraint firstItem="SFF-01-jrE" firstAttribute="trailing" secondItem="kDK-ia-npp" secondAttribute="trailing" type="default" id="dUO-HV-FhW"/>
-                            <constraint firstAttribute="bottom" secondItem="kDK-ia-npp" secondAttribute="bottom" constant="75" id="h22-K7-Yds"/>
+                            <constraint firstItem="IdI-Wi-Ubg" firstAttribute="bottom" secondItem="2SW-ot-cAe" secondAttribute="bottom" type="default" id="1s4-Rj-NKO"/>
+                            <constraint firstItem="kDK-ia-npp" firstAttribute="leading" secondItem="SFF-01-jrE" secondAttribute="leading" type="default" id="2zg-oc-aSM"/>
+                            <constraint firstItem="IdI-Wi-Ubg" firstAttribute="top" secondItem="3" secondAttribute="top" type="default" id="9lm-mt-gYu"/>
+                            <constraint firstItem="kDK-ia-npp" firstAttribute="trailing" secondItem="SFF-01-jrE" secondAttribute="trailing" type="default" id="LAf-0U-1gs"/>
+                            <constraint firstItem="2SW-ot-cAe" firstAttribute="trailing" secondItem="IdI-Wi-Ubg" secondAttribute="trailing" type="default" id="Mv5-h3-jle"/>
+                            <constraint firstItem="2SW-ot-cAe" firstAttribute="trailing" secondItem="kDK-ia-npp" secondAttribute="trailing" type="default" id="Sja-jO-6s7"/>
+                            <constraint firstItem="2SW-ot-cAe" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="fBR-EW-iWR"/>
+                            <constraint firstAttribute="bottom" secondItem="SFF-01-jrE" secondAttribute="bottom" constant="15" id="nbt-bo-b5d"/>
+                            <constraint firstItem="2SW-ot-cAe" firstAttribute="top" secondItem="3" secondAttribute="top" type="default" id="oNe-D0-0Do"/>
+                            <constraint firstAttribute="bottom" secondItem="kDK-ia-npp" secondAttribute="bottom" constant="75" id="vZx-WG-gPD"/>
                         </constraints>
                     </view>
                     <connections>
